--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <div class="mb-3">
           <label for="exampleInputName" class="form-label">Your Name</label>
           <input type="text" class="form-control" id="exampleInputName">
+          <p class="text-danger err-text">Please Enter a name "Akhi"</p>
         </div>
 
         <button type="submit" class="btn btn-primary" id="submit-btn">Submit</button>
-        <p></p>
+      
       </form>
     </div>
 
