project 4th  virson

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p class="text-danger err-text">Please Enter a name "Akhi"</p>
         </div>
 
-        <button type="submit" class="btn btn-primary" id="submit-btn">Submit</button>
+        <button type="submit" class="btn custm-btn" id="submit-btn">Submit</button>
       
       </form>
     </div>
@@ -37,8 +37,8 @@
     <div class=" lomba d-flex justify-content-center align-items-center">
     <div class="text-center  ">
       <h2>Do You Love Me?</h2>
-      <button class="btn btn-primary" id="yes-btn">Yes</button>
-      <button class="btn btn-primary" id="no-btn">No</button>
+      <button class="btn custm-btn" id="yes-btn">Yes</button>
+      <button class="btn custm-btn" id="no-btn">No</button>
     </div>
 
 
