--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 <div class="proposed">
   
-  <div class="  lomba d-flex justify-content-center align-items-center">
+  <div class="  lomba d-flex flex-column justify-content-center align-items-center">
+    <h1 class="text-center">I am in love with you</h1>
+
 <h1 class="text-center">I Love You Dear <i class="fa-solid fa-heart"></i></h1>
   </div>
 </div>
@@ -57,7 +59,8 @@
 
 <div class="proposed-no">
   
-  <div class="  lomba d-flex justify-content-center align-items-center">
+  <div class="  lomba d-flex flex-column justify-content-center align-items-center">
+    <h1 class="text-center">But I am in love with you</h1>
 <h1 class="text-center">I Will Wait For You<i class="fa-solid fa-heart-crack"></i></h1>
   </div>
 </div>
