--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="proposed">
   
   <div class="  lomba d-flex flex-column justify-content-center align-items-center">
-    <h1 class="text-center">I am in love with you</h1>
+    <h1 class="text-center mb-4">I am in love with you.</h1>
 
 <h1 class="text-center">I Love You Dear <i class="fa-solid fa-heart"></i></h1>
   </div>
@@ -60,7 +60,7 @@
 <div class="proposed-no">
   
   <div class="  lomba d-flex flex-column justify-content-center align-items-center">
-    <h1 class="text-center">But I am in love with you</h1>
+    <h1 class="text-center mb-4">But I am in love with you.</h1>
 <h1 class="text-center">I Will Wait For You<i class="fa-solid fa-heart-crack"></i></h1>
   </div>
 </div>
