--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -76,4 +76,4 @@
   <script src="main.js"></script>
 </body>
 
-</html>
+</html> -->
